alignment fixes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,5 +12,5 @@
 .body {
     position: absolute;
     height: 100vh;
-    background-color: #757575;
+    background-color:white;
 }
